kubernetes/argo-cd/projects/aws/production-hm/grafana/environments/production/kubernetes-manifests/hm-grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-grafana-ingress
  namespace: production-hm-grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: production-hm-grafana
spec:
  rules:
    - host: grafana.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.hongbomiao.com
      secretName: hm-grafana-certificate
